fix: dark mode

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -328,8 +328,6 @@ h3 {
 /* my services */
 
 .my-services {
-  background-color: var(--background-light);
-  background-size: cover;
   color: var(--clr-accent);
   text-align: center;
 }
@@ -412,9 +410,8 @@ h3 {
 /* my work */
 
 .my-work {
-  background-color: var(--clr-gradient);
-  color: var(--clr-accent);
-  text-align: center;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 .section__subtitle--work {
